# cl2qcd

./: .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  COPYING.howto  CTestConfig.cmake  INSTALL  INSTALL.md  Names.odt  README.md  TODO.md  astylerc  checksum.h  compareKappa.py  complex_product.cl  complex_sum.cl  exceptions.cpp  exceptions.h  fermionmatrix_eo.cl  fermionmatrix_eo_dslash.cl  fermionmatrix_eo_dslash_AND_M_tm_inverse_sitediagonal_minus.cl  fermionmatrix_eo_dslash_AND_gamma5.cl  fermionmatrix_eo_gamma5.cl  fermionmatrix_eo_m_merged.cl  fermionmatrix_m_tm_plus.cl  fermionmatrix_staggered_M.cl  force_fermion_stout_smear.cl  force_gauge_tlsym.cl  force_staggered_fermion_eo.cl  gaugefield_convert.cl  gaugemomentum_convert.cl  gaugemomentum_squarenorm_reduction.cl  gaugemomentum_zero.cl  gaugeobservables.cpp  gaugeobservables.h  gaugeobservablesExecutable.cpp  gaugeobservablesExecutable.h  (+85 more)
benchmarks/: CMakeLists.txt  bench_plot.py  dksBenchmarkMain.cpp  dksBenchmarkMultipleDevicesMain.cpp  dks_multidev.cpp  dslashBenchmarkMain.cpp  dslashBenchmarkMultipleDevicesMain.cpp  dslash_bench.py  dslash_bench_defs.py  dslash_bench_plot.py  dslash_benchmark.cpp  dslash_multidev.cpp  generic_benchmark.py  heatbathBenchmarkMain.cpp  heatbath_bench.py  heatbath_benchmarks.cpp  hmc_benchmarks.cpp  inverter_bench.py  inverter_bench_defs.py  inverter_bench_plot.py  inverter_benchmarks.cpp  make_benchmark.py  overrelax_bench_plot.py  plot_benchmark_results.py  su3heatbathBenchmarkMain.cpp  su3heatbath_bench.py  su3heatbath_bench_plot.py
boost/: CMakeLists.txt  boost_test.cpp
crypto/: CMakeLists.txt  md5.cpp  md5.hpp  test.cpp
executables/: CMakeLists.txt  benchmarkExecutable.cpp  benchmarkExecutable.h  benchmarkExecutable.hpp  dksBenchmark.cpp  dksBenchmark.h  dksBenchmark.hpp  dslashBenchmark.cpp  dslashBenchmark.h  dslashBenchmark.hpp  exceptions.cpp  exceptions.h  exceptions.hpp  gaugeobservablesExecutable.cpp  gaugeobservablesExecutable.h  gaugeobservablesExecutable.hpp  gaugeobservablesMain.cpp  generalExecutable.cpp  generalExecutable.h  generalExecutable.hpp  generationExecutable.cpp  generationExecutable.h  generationExecutable.hpp  heatbathBenchmark.cpp  heatbathBenchmark.h  heatbathExecutable.cpp  heatbathExecutable.h  hmcExecutable.cpp  hmcExecutable.h  hmcExecutable.hpp  hmcMain.cpp  inverterExecutable.cpp  inverterExecutable.h  inverterExecutable.hpp  inverterMain.cpp  measurementExecutable.cpp  measurementExecutable.h  measurementExecutable.hpp  rhmc.cpp  rhmc.h  (+11 more)
geometry/: CMakeLists.txt  index.cpp  index.hpp  index_test.cpp  latticeExtents.cpp  latticeExtents.hpp  latticeExtents_test.cpp  latticeGrid.cpp  latticeGrid.hpp  latticeGrid_test.cpp  parallelization.cpp  parallelization.hpp  parallelization_test.cpp
hardware/: CMakeLists.txt  device.cpp  device.hpp  device_info.cpp  device_info.hpp  device_test.cl  device_test.cpp  dummyFunctions.cl  dummyKernel.cl  hardwareParameters.hpp  hardwareParameters_test.cpp  hardwareTestUtilities.cpp  hardwareTestUtilities.hpp  hardware_test_util.cpp  hardware_test_util.hpp  interfaceMockups.hpp  openClCode.hpp  openClCode_test.cpp  openClKernelParameters.hpp  opencl_compiler.cpp  opencl_compiler.hpp  opencl_compiler_test.cpp  profiling_data.cpp  profiling_data.hpp  profiling_data_test.cpp  size_4.hpp  synchronization_event.cpp  synchronization_event.hpp  synchronization_event_test.cpp  system.cpp  system.hpp  system_test.cpp
host_functionality/: CMakeLists.txt  host_geometry.cpp  host_geometry.h  host_operations_gaugefield.cpp  host_operations_gaugefield.h  host_operations_gaugefield.hpp  host_random.cpp  host_random.h  host_random.hpp  host_use_timer.cpp  host_use_timer.h  host_use_timer.hpp  logger.cpp  logger.hpp
ildg_io/: CMakeLists.txt  SourcefileParameters.cpp  SourcefileParameters.hpp  SourcefileParameters_test.cpp  SourcefileParameters_utilities.cpp  SourcefileParameters_utilities.hpp  SourcefileParameters_values.cpp  SourcefileParameters_values.hpp  SourcefileParameters_values_test.cpp  checksum.h  checksum.hpp  conf.00200  conf.tmlqcd  ildgIo.cpp  ildgIo.hpp  ildgIoParameters.cpp  ildgIoParameters.hpp  ildgIo_gaugefield.cpp  ildgIo_gaugefield.hpp  ildgIo_gaugefield_test.cpp  ildg_read_gaugefield.cpp  ildg_read_gaugefield.h  ildg_read_gaugefield_test.cpp  ildg_write_gaugefield.cpp  ildg_write_gaugefield.h  limeFileReader.cpp  limeFileReader.hpp  limeFileReader_test.cpp  limeFileWriter.cpp  limeFileWriter.hpp  limeUtilities.cpp  limeUtilities.hpp  limeUtilities_test.cpp  matrixSu3_utilities.cpp  matrixSu3_utilities.hpp  matrixSu3_utilities_test.cpp  parser_utils.h
meta/: CMakeLists.txt  config_file_normalizer.cpp  config_file_normalizer.hpp  config_file_normalizer_test.cpp  counter.cpp  counter.hpp  exceptions.cpp  inputparameters.cpp  inputparameters.hpp  inputparameters_hmc.hpp  inputparameters_test.cpp  parametersBasic.cpp  parametersBasic.hpp  parametersConfig.cpp  parametersConfig.hpp  parametersFermion.cpp  parametersFermion.hpp  parametersGauge.cpp  parametersGauge.hpp  parametersHeatbath.cpp  parametersHeatbath.hpp  parametersHmc.cpp  parametersHmc.hpp  parametersHmc_test.cpp  parametersIntegrator.cpp  parametersIntegrator.hpp  parametersIo.cpp  parametersIo.hpp  parametersMonteCarlo.cpp  parametersMonteCarlo.hpp  parametersObs.cpp  parametersObs.hpp  parametersRationalApproximation.cpp  parametersRationalApproximation.hpp  parametersRhmc.cpp  parametersRhmc.hpp  parametersSolver.cpp  parametersSolver.hpp  parametersSources.cpp  parametersSources.hpp  (+12 more)
physics/: CMakeLists.txt  additionalParameters.hpp  additionalParameters_test.cpp  gaugeObservables.cpp  gaugeObservables.h  interfacesHandler.hpp  interfacesHandler_test.cpp  parametersPrng.cpp  parametersPrng.hpp  parametersPrng_test.cpp  prng.cpp  prng.hpp  prngInterface.hpp  prng_test.cpp  prngstate_brokenTag  sources.cpp  sources.hpp  sourcesInterface.hpp  sources_test.cpp  test_util_staggered.h  test_util_staggered.hpp  utilities.cpp  utilities.hpp  utilities_test.cpp
prog/: #gaugefield.h#  #types.h#  (+458 more)
(+2241 files in other folders)
